finalized booking + first part dashboard

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -64,6 +64,7 @@
 }
 
 // Paddings
+
 .padded {
   padding-top: 5em;
   padding-bottom: 5em;
@@ -113,6 +114,11 @@
 .padded-ri {
   padding-right: 30px;
 }
+
+.padded-full-lg {
+  padding: 40px;
+}
+
 
 
 
