--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -7,7 +7,7 @@
 }
 
 .banner-bk-gray h5 {
-  width: 500px;
+  width: 75%;
 }
 
 .position {
@@ -19,33 +19,29 @@
 }
 .position h5 {
   position: absolute;
-  // top: 150px;
-  // left: 448px;
+  bottom: -300px;
 }
 .position img {
   position: absolute;
   width: 50%;
-  top: 400px;
+  top: 350px;
 }
 
-// UNIVERSE INSPIRATION
-.universe-presentation {
-  height: 500px;
-  padding-top: 200px;
-  position: relative;
+//UNIVERSE INSPIRATION
+.margin-lg {
   margin-bottom: 100px;
+  margin-top: 200px;
 }
 
 .universe-presentation h4 {
   width: 400px;
-  position: absolute;
-  left: 200px;
+
 }
 
 .universe.wood.border {
   position: relative;
-  height: 320px;
-  width: 250px;
+  height: 370px;
+  width: 300px;
   border: 3px solid $wood;
 }
 
@@ -92,12 +88,6 @@
 .universe-text-bottom {
   width: 500px;
 }
-
-// UNIVERSE BUTTON
-
-// .universe.wood.btn {
-//   color: $orange;
-// }
 
 // TRAIT DE COULEUR
 .universe.wood.surligned {
@@ -158,19 +148,34 @@
 .left-surlign.wood {
   border-left: 6px solid $wood;
 }
+.bottom-surlign.wood {
+  border-bottom: 6px solid $wood;
+  width: 150px;
+}
 
-.craftman-presentation.one {
+.craftman-presentation {
   height: 110px;
   width: 350px;
+}
+.craftman-presentation.one {
   // padding-left: 20px;
 }
 
 .craftman-presentation.two {
-  height: 110px;
-  width: 355px;
-  padding-left: 20px;
+  // padding-left: 20px;
+}
+
+.craftman-presentation.three {
+
+}
+.craftman-presentation.four {
+
 }
 .name h3 {
-  width: 20px;
+  width: 150px;
 }
+
+
+
+
 
