--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -8,10 +8,10 @@
       <div class="banner-bk-gray position banner-height-lg">
 
         <div class="row">
-          <div class="col-xs-6 col-xs-offset-2">
+          <div class="col-xs-12 col-xs-offset-2 col-sm-offset-4 col-md-6">
             <h1><%= @universe.name.upcase %></h1>
           </div>
-          <div class="col-xs-6 col-md-6 col-md-offset-2">
+          <div class="col-xs-12 col-xs-offset-2 col-md-6 col-md-offset-6">
             <h5>
             <!-- @universe.slug -->
               Wood is a soft and living material rich in a multitude of essences. A natural product that must dry slowly before being shaped.
@@ -23,8 +23,7 @@
           <div class="col-xs-offset-3 col-lg-offset-3">
             <div class="details-photo universe">
               <!-- photo -->
-              <%= image_tag @universe.banner_bottom.fullpath, crop: :fill %>
-              <!-- <img src="http://placehold.it/620x330" alt=""> -->
+              <%= image_tag @universe.banner_bottom.fullpath %>
             </div>
           </div>
         </div>
@@ -37,8 +36,9 @@
 <!-- INSPIRATION PAR UNIVERSE (petit-text + photo) -->
 <div class="container-fluid">
   <div class="row">
-    <div class="universe-presentation">
-      <div class="col-xs-12 col-md-8 col-md-offset-1">
+
+      <div class="col-xs-12 col-sm-offset-2 col-md-3 col-md-offset-2 ">
+        <div class="universe-presentation margin-lg">
         <h4>
           “There is a magical, contemplative feeling
           in the forest. We encourage people to visit,
@@ -48,13 +48,14 @@
           chapters in the trees whose narratives will
           be reconstituted a century later.”
         </h4>
-      </div>
-      <div class="col-xs-12 col-md-4 col-md-offset-8">
-        <div class="universe <%= @universe.code %> border">
-          <%= image_tag 'http://placehold.it/250x320' %>
         </div>
       </div>
-    </div>
+      <div class="col-xs-12 col-sm-offset-2 col-md-4 col-md-offset-2">
+        <div class="universe <%= @universe.code %> border margin-lg">
+          <%= image_tag @universe.middle_gallery.last.fullpath, height: 370, width: 300, gravity: :center, crop: :fit %>
+        </div>
+      </div>
+
   </div>
 </div>
 <!-- END -->
@@ -72,7 +73,7 @@
     <div class="universe-desciption">
       <div class="col-xs-12 col-md-6 col-md-offset-2">
         <p class="text-left universe-text-top">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Since prehistoric times, wood has allowed the man to make fire, to build shelters or to make tools and weapons. Some of the most important inventions of the civilized world - the wheel, the printing press and the first computer, the abacus - were first made of wood. Nowadays, the uses of this material remain as varied as in the past.
         </p>
       </div>
       <div class="col-xs-12 col-md-6 col-md-offset-5">
@@ -185,15 +186,62 @@
   </div>
 
   <!-- Artisan #2 -->
-  <div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="padded universe craftman">
+      <div class="col-xs-6 col-md-8">
+        <div class="presentation-text">
+          <div class="craftman-presentation three">
+            <!-- texte de présentation -->
+            <p>Chaque arbre révèle les méandres de ses veines et les secrets de son cœur pour mon plus grand bonheur</p>
+          </div>
+          <div class="craftman-presentation four">
+            <!-- suite text de présentation -->
+            Révèle les méandres de ses veines et les secrets de son cœur pour mon plus grand bonheur. Arbre révèle les méandres de ses veines et les secrets de son cœur pour mon plus grand bonheur.
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-3 col-md-offset-1  ">
+        <div class="presentation-pic">
+          <div>
+            <!-- photo du craftman -->
+            <%= image_tag 'http://placehold.it/220x220' %>
+          </div>
+          <div class=" name bottom-surlign <%= @universe.code %>">
+            <!-- introduire en ruby le nom du craftman -->
+            <h3>MAT JOHNSON</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
   <!-- Artisan #3 -->
-  <div>
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="padded universe craftman">
+      <div class="col-xs-6 col-md-3 col-md-offset-1  ">
+        <div class="presentation-pic">
+          <div class="name">
+            <!-- introduire en ruby le nom du craftman -->
+            <h3>MAT JOHNSON</h3>
+          </div>
+          <div>
+            <!-- photo du craftman -->
+            <%= image_tag 'http://placehold.it/220x220' %>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-8">
+        <div class="presentation-text">
+          <div class="craftman-presentation one">
+            <!-- texte de présentation -->
+            <p>Chaque arbre révèle les méandres de ses veines et les secrets de son cœur pour mon plus grand bonheur</p>
+          </div>
+          <div class="left-surlign <%= @universe.code %> craftman-presentation two">
+            <!-- suite text de présentation -->
+            Révèle les méandres de ses veines et les secrets de son cœur pour mon plus grand bonheur. Arbre révèle les méandres de ses veines et les secrets de son cœur pour mon plus grand bonheur.
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
