--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -109,6 +109,9 @@
 .padded-bottom-sm {
   padding-bottom: 10px;
 }
+.padded-bottom-m {
+  padding-bottom: 20px;
+}
 .padded-bottom-md {
   padding-bottom: 40px;
 }
