--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -19,14 +19,14 @@
           <div class="card-index">
             <div class="card-img">
               <%= cl_image_tag wksp.photos.first, height: 150, width: 358, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
-              <div class="col-xs-12 text-center craftman-name">
-                <p class="white"><%= wksp.craftman.first_name %></p>
-                <p class="white"><%= wksp.craftman.last_name %></p>
+              <div class="text-center craftman-name">
+                <p class="roboto txt-gras white"><%= wksp.craftman.first_name %></p>
+                <p class="roboto txt-gras white"><%= wksp.craftman.last_name %></p>
               </div>
             </div>
             <div class="card-block">
               <p class="card-title roboto txt-gras txt-md text-uppercase"><%= wksp.title %></p>
-              <p class="card-text roboto txt-description txt-light padded-bottom-m"><%= wksp.description[0..80] %>...</p>
+              <p class="roboto txt-description txt-light padded-bottom-m"><%= wksp.description[0..80] %>...</p>
               <div>
                 <div class="row">
                   <div class="col-md-3">
