--- a/app/views/messages/_form_craftman.html.erb
+++ b/app/views/messages/_form_craftman.html.erb
@@ -3,5 +3,5 @@
         <div class="message_input_wrapper">
       <%= f.input :content, input_html: {class: "message_input"}, placeholder: "Type your message here...", label: false  %>
         </div>
-          <%= f.button :submit, class: "text send_message" %>
+          <%= f.button :submit, "Send", class: "text send_message" %>
     <% end %>
