--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -1,7 +1,9 @@
- <li class="message <%= message.user_left_right %> appeared">
-  <div class="avatar">
-
-  </div>
+ <li class="message <%= side = message.user_left_right %> appeared">
+  <% if side == "right" %>
+     <%= image_tag user_avatar(current_user), class: "avatar" %>
+  <% else %>
+    <%= image_tag craftman_avatar(message.craftman), class: "avatar" %>
+  <% end %>
   <div class="text_wrapper">
     <div class="text">
       <p><%= message.content %></p>
