--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,27 +12,15 @@
     <!-- Different navigation if login or not -->
     <% if craftman_signed_in? %>
 
-      <!-- Notification -->
-      <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
-        <div class="badge-container">
-          <i class="fa fa-envelope-o"></i>
-          <div class="badge badge-blue">3</div>
-        </div>
-      <% end %>
-
       <!-- Profile picture and dropdown -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag craftman_avatar(current_craftman), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%# image_tag craftman_avatar(current_craftman), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <span class="navbar-wagon-item dropdown-toggle" id="navbar-wagon-menu" data-toggle= "dropdown" >My Profile</span>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+              <%= link_to craftmen_dashboard_path do %>
+                <i class="fa fa-user"></i> <span>  Dashboard</span>
               <% end %>
             </li>
             <li>
@@ -44,29 +32,21 @@
         </div>
       </div>
 
+      <!-- Button (call-to-action) -->
+      <%= link_to t(".top_call_to_action", default: "Create a workshop"), new_workshop_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+
     <% elsif user_signed_in? %>
 
-      <!-- Notification -->
-      <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
-        <div class="badge-container">
-          <i class="fa fa-envelope-o"></i>
-          <div class="badge badge-blue">3</div>
-        </div>
-      <% end %>
 
       <!-- Profile picture and dropdown -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag user_avatar(current_user), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%# image_tag craftman_avatar(current_craftman), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <span class="navbar-wagon-item dropdown-toggle" id="navbar-wagon-menu" data-toggle= "dropdown" >My Profile</span>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+              <%= link_to dashboard_path do %>
+                <i class="fa fa-user"></i> <span>  Dashboard</span>
               <% end %>
             </li>
             <li>
@@ -86,10 +66,9 @@
       <!-- Login text link -->
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
+      <!-- Button (call-to-action) -->
+      <%= link_to t(".top_call_to_action", default: "Create a workshop"), new_workshop_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
     <% end %>
-
-    <!-- Button (call-to-action) -->
-    <%= link_to t(".top_call_to_action", default: "Create a workshop"), new_workshop_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
