--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -2,7 +2,7 @@
 <div class="title banner-bk-gray-small">
    <div class="row">
      <div class="col-xs-12 col-xs-offset-1">
-       <h1 class="padded-md">Hello <%= @user.first_name %></h1>
+       <h1 class="padded-md text-align">Hello <%= @user.first_name %></h1>
      </div>
    </div>
  </div>
