--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,3 +1,24 @@
+.card-universe {
+  height: 275px;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 30px;
+}
+.card-universe-title {
+  text-decoration: none;
+  font-family: 'Vidaloka', serif;
+  font-size: 40px;
+  color: white;
+}
+.card-universe-title hover {
+  text-decoration: none;
+  font-family: 'Vidaloka', serif;
+  font-size: 40px;
+  color: white;
+}
 .card-index {
   background-size: cover !important;
   height: 500px;
