--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -66,6 +66,11 @@
 }
 
 // margins
+.margin-md {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .margin-verti-fat {
   margin-top: 40px;
   margin-bottom: 40px;
