--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -32,10 +32,13 @@
            <div class="txt-md txt-light text-center">
             <h3><%= @user.last_name %></h3>
            </div>
+           <!-- button -->
            <div class="text-center">
-             <%= link_to "Editez profile", edit_profile_path, class: "btn btn-primary" %>
+             <%= link_to "Editez profile", edit_profile_path, class: "btn default margin-md" %>
            </div>
+
       </div>
+
 
       <!-- Notifications + inbox  -->
       <div class="col-xs-12 col-sm-6 padded-top-md ">
@@ -67,76 +70,72 @@
   </div>
 </div>
 
-<!-- Tabs -->
-    <div class="tab margin-bottom-md">
-      <ul class="tabs text-center">
-        <div class="row">
-          <li class="col-xs-12 col-md-4"><a href="#">Past Workshops</a></li>
-          <li class="col-xs-12 col-md-4"><a href="#">Workshops to come</a></li>
-        </div>
-      </ul>
-
-
 <div class="container">
+   <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <div class="row">
 
-  <% @user.workshops.each do |wksp| %>
-    <div class="row">
-      <div class="col-xs-12 col-sm-4">
-        <div class="card-index">
-          <div class="card-img">
-            <%= cl_image_tag wksp.photos.first, height: 150, width: 358, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
-            <div class="col-xs-12 text-center craftman-name">
-              <p class="white"><%= wksp.craftman.first_name %></p>
-              <p class="white"><%= wksp.craftman.last_name %></p>
-            </div>
-          </div>
-          <div class="card-block">
-            <h2 class="card-title"><%= wksp.title %></h2>
-            <p class="card-text"><%= truncate(wksp.description, length: 80, separator: '.') %></p>
-            <div>
+        <div class="tab margin-bottom-md">
+            <ul class="tabs text-center">
               <div class="row">
-                <div class="col-md-3">
-                  <div class="upper-line"><hr></div>
-                  <h6 class="txt-regular">Where</h6>
-                </div>
-                <div class="col-md-9">
-                  <div class="upper-line-left"><hr></div>
-                  <h6 class="txt-light"><%= wksp.craftman.address %></h6>
-                </div>
+                <li class="col-xs-12 col-md-4"><a href="#">Past Workshops</a></li>
+                <li class="col-xs-12 col-md-4"><a href="#">Workshops to come</a></li>
               </div>
-              <div class="row">
-                <div class="col-md-3">
-                  <div class="upper-line"><hr></div>
-                  <h6 class="txt-regular">Price</h6>
-                </div>
-                <div class="col-md-9">
-                  <div class="upper-line-left"><hr></div>
-                  <h6 class="txt-light"><%= humanized_money_with_symbol(wksp.price)%>/day</h6>
-                </div>
-              </div>
-            </div>
-            <div class="text-center">
-              <%= link_to "DETAILS", workshop_path(wksp), class: "btn btn-lg btn-default" %>
-            </div>
-          </div>
+            </ul>
         </div>
-      </div>
+
+<!-- Workshops -->
+        <div class="container">
+            <% @user.workshops.each do |wksp| %>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-4">
+                    <div class="card-index">
+                      <div class="card-img">
+                        <%= cl_image_tag wksp.photos.first, height: 150, width: 358, crop: :fill, style: "background: rgba(0,36,61,0.6)" %>
+                        <div class="col-xs-12 text-center craftman-name">
+                          <p class="white"><%= wksp.craftman.first_name %></p>
+                          <p class="white"><%= wksp.craftman.last_name %></p>
+                        </div>
+                      </div>
+                      <div class="card-block">
+                        <h2 class="card-title"><%= wksp.title %></h2>
+                        <p class="card-text"><%= truncate(wksp.description, length: 80, separator: '.') %>
+                        </p>
+                      <div>
+                       <div class="row">
+                        <div class="col-md-3">
+                          <div class="upper-line"><hr></div>
+                          <h6 class="txt-regular">Where</h6>
+                        </div>
+                        <div class="col-md-9">
+                          <div class="upper-line-left"><hr></div>
+                          <h6 class="txt-light"><%= wksp.craftman.address %></h6>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-3">
+                            <div class="upper-line"><hr></div>
+                            <h6 class="txt-regular">Price</h6>
+                          </div>
+                          <div class="col-md-9">
+                            <div class="upper-line-left"><hr></div>
+                            <h6 class="txt-light"><%= humanized_money_with_symbol(wksp.price)%>/day</h6>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="text-center">
+                        <%= link_to "DETAILS", workshop_path(wksp), class: "btn btn-lg btn-default" %>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+
     </div>
-  <% end %>
-
+  </div>
 </div>
-
-
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="javascripts/tabs.js"></script>
 
-
-
-<%= link_to "My bookings", bookings_path  %>
-
-<%= link_to "Past Bookings"  %>
-
-<%= link_to "Edit my profile", edit_profile_path  %>
