trait surligné couleur modifié sur la show universe (idem que celui d'amélie)é

--- a/app/assets/stylesheets/components/_universe.scss
+++ b/app/assets/stylesheets/components/_universe.scss
@@ -66,23 +66,15 @@
   padding-top: 2em;
 }
 
-// TRAIT DE COULEUR
-.universe.wood.surligned {
-  border-top: 6px solid $wood;
-  width: 170px; // dépends de la taille de la police
-}
-
+// universe jobs
 .universe.wood.job {
   height: 270px;
 }
 
-.universe.wood h2 {
-}
-
-.wood.two {
-  position: absolute;
-  left: 80px;
-}
+// .wood.two {
+//   position: absolute;
+//   left: 80px;
+// }
 
 // JOBS
 .jobs {
