--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -99,9 +99,10 @@
 <!-- JOBS -->
 <div class="container-fluid">
   <div class="row">
-    <div class="universe <%= @universe.code %> job padded">
+    <div class="universe <%= @universe.code %> job padded-top-md">
       <div class="col-xs-10 col-xs-offset-1">
-        <div class="universe <%= @universe.code %> surligned">
+        <div class="color-line-title-<%= @universe.code %>">
+          <hr>
         </div>
         <h2><%= @universe.name %></h2>
         <h2 class="padding-left-xl">jobs</h2>
@@ -131,7 +132,8 @@
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1">
       <div class="universe <%= @universe.code %> job padded">
-        <div class="universe <%= @universe.code %> surligned">
+        <div class="color-line-title-<%= @universe.code %>">
+          <hr>
         </div>
         <h2>Meet ours</h2>
         <h2 class="padding-left-xl">craftmen</h2>
