--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -93,7 +93,8 @@
                   // possibility to pass other gmap options here
                 },
                 internal: { id: 'map' } }, function() {
-                markers = handler.addMarkers(<%= raw @hash.to_json %>);
+                markers = handler.addMarkers(<%= raw @hash.to_json %>
+                );
                 handler.bounds.extendWith(markers);
                 handler.fitMapToBounds();
                 if (markers.length == 0) {
